---------------------------------------------------------------------------------------------------
Version: 1.3.22
Date: ????
  Features:
    - Added new milestone types "item_consumption" and "fluid_consumption", which trigger on consumption rather than production. This has some niche uses for some modpacks.
      Because of the niche use, these can't be added via the GUI yet. You can add them in presets or with the export feature.
    - Added a player mod setting to allow hiding all incomplete milestones.

  Changes:
    - Infinite milestones marked as "hidden" will now only have the initial milestone hidden. Milestones created from the infinite milestone's completion will be visible.
    - Added a small text to fill the space when no milestones are visible at all, to make it look more intentionally empty.
    - Marked the selected preset name with "(Modified)" if the current set has been modified compared to the preset.

---------------------------------------------------------------------------------------------------
Version: 1.3.21
Date: 2023-12-26
  Features:
    - Milestones presets can now mark milestones as "hidden". These milestones are still tracked but will only appear in the GUI after they are reached.

  Changes:
    - Small additions to SE default presets: Added a couple hidden milestones for a couple spoilers. Removed "(No spoilers)" from the name of the presets. The name change will cause a "detected a new preset" message on save file load, but you can ignore it.
    - Small additions to PyMods default presets: Added burner assembler 1 and splitter.

  Scripting:
    - A custom event is now fired when a milestone is reached. Use the new remote interface to get the custom event ID: remote.call("milestones", "get_on_milestone_reached_event"). Thanks to Ziro2k for the idea and code inspiration.