@@ -66,7 +66,7 @@ settings_preset_modified=(Modified)
 settings_import=Import
 settings_export=Export
 settings_reset_preset=Reset
-settings_reset_preset_tooltip=Reset your milestones set to the auto-detected preset. This can be useful if you add or update mods and want to use the new auto-detected default.
+settings_reset_preset_tooltip=Reset your milestones set to the auto-detected default.\nThis can be useful if you add or update mods and want to use the new default.
 settings_export_encoded=Encoded:
 settings_import_description=Paste a plain JSON string or an encoded string.
 settings_back=Back
